--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                       </div>
                       <form class="buy__form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
                         <button aria-label="Заказать LevelUp" type="submit" class="button-buy transition-200ms without-outline">Заказать</button>
-                        <input aria-label="Телефон" required type="tel" class="buy__input transition-100ms without-outline" name="tel" placeholder="Телефон*" data-validate-field="tel" data-validate-rules="phone" value=""> 
+                        <input aria-label="Телефон" required type="number" class="buy__input transition-100ms without-outline" name="tel" placeholder="Телефон*" data-validate-field="tel" data-validate-rules="phone" value=""> 
                         <div class="buy__clue"><div>Пример: +79001234567</div></div>
                         <input aria-label="Имя" required type="text" class="buy__input transition-100ms without-outline" name="name" placeholder="Имя*" data-validate-field="name" value="">
                         <div class="buy__clue"><div>Пример: Иван</div></div>
